# Cpp_NumPy_Experiences

./: README.md
Cpp_NumPy_Basic/: CMakeLists.txt  PythonEnvSetup.cmake
Cpp_NumPy_Basic/src/: example.cpp  main.cpp
Cpp_NumPy_Experiences/: CMakeLists.txt  PythonEnvSetup.cmake
Cpp_NumPy_Experiences/Cpp_NumPy_Basic/: CMakeLists.txt
Cpp_NumPy_Experiences/Cpp_NumPy_Basic/include/: example.hpp
Cpp_NumPy_Experiences/Cpp_NumPy_Basic/src/: main.cpp
Cpp_NumPy_Experiences/Cpp_NumPy_Statistic/: CMakeLists.txt
Cpp_NumPy_Experiences/Cpp_NumPy_Statistic/include/: example_statistic.hpp
Cpp_NumPy_Experiences/Cpp_NumPy_Statistic/src/: example_statistic.cpp  main.cpp
